[package]
name = "april2018"
version = "0.1.0"
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
build = "build.rs"

[dependencies]
rand = "0.8"
cgmath = "0.18"
collision = "0.20"
trait_enum = "0.5"
error-chain = "0.12"

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf", "image", "mixer", "gfx"]

[profile.release]
lto = true